Subscriptions fix: shifting classes to body (#16542)
* shifting classes to body

* bringing amp-subscriptions styles on body

* fixing pingback in example

* Update renderer.js

* Update renderer.js

* fixing lint

--- a/extensions/amp-subscriptions/0.1/amp-subscriptions.css
+++ b/extensions/amp-subscriptions/0.1/amp-subscriptions.css
@@ -19,7 +19,7 @@
  * Loading indicator.
  * Hide when `i-amphtml-subs-loading` class is not set.
  */
-html[amp-version]:not(.i-amphtml-subs-loading) [subscriptions-section="loading"] {
+body:not(.i-amphtml-subs-loading) [subscriptions-section="loading"] {
   display: none !important;
 }
 
@@ -28,7 +28,7 @@ html[amp-version]:not(.i-amphtml-subs-loading) [subscriptions-section="loading"]
  * Content section.
  * Hide when not known or denied.
  */
-html[amp-version]:not(.i-amphtml-subs-grant-yes) [subscriptions-section="content"] {
+body:not(.i-amphtml-subs-grant-yes) [subscriptions-section="content"] {
   display: none !important;
 }
 
@@ -37,7 +37,7 @@ html[amp-version]:not(.i-amphtml-subs-grant-yes) [subscriptions-section="content
  * Content-not-granted section.
  * Hide when not known or granted.
  */
-html[amp-version]:not(.i-amphtml-subs-grant-no) [subscriptions-section="content-not-granted"] {
+body:not(.i-amphtml-subs-grant-no) [subscriptions-section="content-not-granted"] {
   display: none !important;
 }
 
@@ -46,8 +46,8 @@ html[amp-version]:not(.i-amphtml-subs-grant-no) [subscriptions-section="content-
  * Actions sections.
  * Hide when not known or delegated.
  */
-html.i-amphtml-subs-grant-unk [subscriptions-section="actions"],
-html.i-amphtml-subs-delegated [subscriptions-section="actions"] {
+body.i-amphtml-subs-grant-unk [subscriptions-section="actions"],
+body.i-amphtml-subs-delegated [subscriptions-section="actions"] {
   display: none !important;
 }
 
@@ -57,7 +57,7 @@ html.i-amphtml-subs-delegated [subscriptions-section="actions"] {
  */
 
 /** Hide actions until state is known. */
-html.i-amphtml-subs-grant-unk [subscriptions-action] {
+body.i-amphtml-subs-grant-unk [subscriptions-action] {
   display: none !important;
 }
 
@@ -103,7 +103,7 @@ amp-subscriptions-dialog {
   cursor: pointer;
 }
 
-html[amp-version]:not(.i-amphtml-subs-grant-yes) .i-amphtml-subs-dialog-close-button {
+body:not(.i-amphtml-subs-grant-yes) .i-amphtml-subs-dialog-close-button {
   display: none;
 }
 
